scripts/nullaway/annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8.txt
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:129: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:167: error: [NullAway] dereferenced expression r is @Nullable
			if (r.getConfig().equals(this) && p.getConfig().equals(this)) {
			     ^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Configuration.java:309: error: [NullAway] dereferenced expression sender.getConfig().getParentConfig() is @Nullable
					if(sender.getConfig().getParentConfig().equals(rec.getConfig())) {
					                                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Element.java:25: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.parent;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Composant.java:46: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.portsF.get(name);
		^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:11: error: [NullAway] initializer method does not guarantee @NonNull fields sideA (line 8), sideB (line 9) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Attachment(String name) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.sideA = a;
		           ^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M2/Attachment.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.sideB = b;
		           ^
    (see http://t.uber.com/nullaway )
../annotator/urlb54e207112_Ghuillaume_CSA_tgz-pJ8-M0_ApplicationJ8/src/M0/Application.java:40: error: [NullAway] dereferenced expression mainConfig.getComposant("Client").getServiceF("SendRequestService") is @Nullable
		mainConfig.getComposant("Client").getServiceF("SendRequestService").activate("hello");
		                                                                   ^
    (see http://t.uber.com/nullaway )
9 errors
